deploy/envoy/22-primary-secondary.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: 
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: 
                            prefix: "/" 
                          route: 
                            cluster: some_service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: some_service
      connect_timeout: 0.25s
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.aggregate
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
          clusters:
            # cluster primary, secondary and tertiary should be defined outside.
            - primary
            - secondary
            # - tertiary
    - name: primary
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        timeout: 0.25s
        interval: 2s
        unhealthy_threshold: 3
        healthy_threshold: 1
        http_health_check:
          path: "/ping/state"
      load_assignment:
        cluster_name: primary
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3001
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3002
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3003
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3004
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3005
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3006
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3007
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3008
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3009
    - name: secondary
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        timeout: 0.25s
        interval: 2s
        unhealthy_threshold: 3
        healthy_threshold: 1
        http_health_check:
          path: "/ping/state"
      load_assignment:
        cluster_name: secondary
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4000
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4001
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4002
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4003
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
